--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -31,6 +31,7 @@
     <string name="locking_warning">ADVARSEL: Hvis du glemmer passordet til notatene, kan du ikke gjenopprette det eller få tilgang til notatenes innhold lenger.</string>
     <string name="new_text_note">Ny tekstnotat</string>
     <string name="new_checklist">Ny sjekkliste</string>
+    <string name="cannot_load_over_internet">The app cannot load files over the internet</string>
     <!-- File notes -->
     <string name="open_file">Åpne fil</string>
     <string name="export_as_file">Eksporter som fil</string>
