--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -30,6 +30,7 @@
     <string name="locking_warning">УПОЗОРЕЊЕ: Ако заборавите лозинку за белешке, више нећете моћи да је повратите нити да приступите садржају белешки.</string>
     <string name="new_text_note">Нова текстуална белешка</string>
     <string name="new_checklist">Нова контролна листа</string>
+    <string name="cannot_load_over_internet">The app cannot load files over the internet</string>
     <!-- File notes -->
     <string name="open_file">Отворена датотека</string>
     <string name="export_as_file">Извези као датотеку</string>
