--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -31,6 +31,7 @@
     <string name="locking_warning">ПАПЯРЭДЖАННЕ: Калі вы забудзеце пароль, вы больш не зможаце аднавіць яго альбо атрымаць доступ да змесціва нататак.</string>
     <string name="new_text_note">Новая тэкставая нататка</string>
     <string name="new_checklist">Новы кантрольны спіс</string>
+    <string name="cannot_load_over_internet">The app cannot load files over the internet</string>
     <!-- File notes -->
     <string name="open_file">Адкрыць файл</string>
     <string name="export_as_file">Экспарт у файл</string>
