--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -31,6 +31,7 @@
     <string name="locking_warning">HOIATUS: Kui sa unustad märkme salasõna, siis sa ei saa seda märget avada ega tema sisu lugeda.</string>
     <string name="new_text_note">Uus tekstimärge</string>
     <string name="new_checklist">Uus tööde loend</string>
+    <string name="cannot_load_over_internet">The app cannot load files over the internet</string>
     <!-- File notes -->
     <string name="open_file">Ava fail</string>
     <string name="export_as_file">Ekspordi failina</string>
