--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -31,6 +31,7 @@
     <string name="locking_warning">ĮSPĖJIMAS: jei pamiršite užrašų slaptažodį, nebegalėsite jo atkurti ar pasiekti užrašų turinio.</string>
     <string name="new_text_note">New text note</string>
     <string name="new_checklist">New checklist</string>
+    <string name="cannot_load_over_internet">The app cannot load files over the internet</string>
     <!-- File notes -->
     <string name="open_file">Atverti bylą</string>
     <string name="export_as_file">Kurti kopiją</string>
