--- a/app/src/main/res/values-pa-rPK/strings.xml
+++ b/app/src/main/res/values-pa-rPK/strings.xml
@@ -30,6 +30,7 @@
     <string name="locking_warning">چیتاونی: جےتسی نوٹ دا پاس‌ورڈ بھُل جاندے او، تاں فیر نوٹ دی سمگری لبھ نہیں سکدیاں۔</string>
     <string name="new_text_note">نواں لکھت دا نوٹ بݨاؤ</string>
     <string name="new_checklist">نویں چیک‌لِسٹ بݨاؤ</string>
+    <string name="cannot_load_over_internet">The app cannot load files over the internet</string>
     <!-- File notes -->
     <string name="open_file">فائل کھُلھو</string>
     <string name="export_as_file">فائل ایکسپورٹ کرو</string>
