--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -30,6 +30,7 @@
     <string name="locking_warning">OPOZORILO: Če pozabite geslo za opombe, ga ne bo moč več obnoviti in dostopati do njihove vsebine.</string>
     <string name="new_text_note">Nova opomba k besedilu</string>
     <string name="new_checklist">Nov seznam za preverjanje</string>
+    <string name="cannot_load_over_internet">The app cannot load files over the internet</string>
     <!-- File notes -->
     <string name="open_file">Odprite datoteko</string>
     <string name="export_as_file">Izvozite kot datoteko</string>
