refactor: cannot_load_over_internet string

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -78,12 +78,10 @@
     <string name="export_notes">Xuất tất cả các ghi chú</string>
     <string name="import_notes">Nhập ghi chú</string>
     <string name="import_notes_pro">Nhập ghi chú (Bản trả phí)</string>
-    <string name="cant_load_files_over_internet">Simple Notes can not load files over the internet</string>
 
     <!-- FAQ -->
     <string name="faq_1_title">Làm cách nào để thay đổi màu tiện ích?</string>
-    <string name="faq_1_text">Trong trường hợp bạn chỉ có 1 tiện ích con đang hoạt động, bạn có thể tạo lại nó hoặc sử dụng nút trong cài đặt ứng dụng để tùy chỉnh nó. Nếu bạn có nhiều tiện ích con đang hoạt động, nút trong cài đặt ứng dụng sẽ không khả dụng. Vì ứng dụng hỗ trợ tùy chỉnh màu sắc cho mỗi tiện ích, bạn sẽ phải tạo lại tiện ích mà bạn muốn tùy chỉnh.</string>
-    <!--
+    <string name="faq_1_text">Trong trường hợp bạn chỉ có 1 tiện ích con đang hoạt động, bạn có thể tạo lại nó hoặc sử dụng nút trong cài đặt ứng dụng để tùy chỉnh nó. Nếu bạn có nhiều tiện ích con đang hoạt động, nút trong cài đặt ứng dụng sẽ không khả dụng. Vì ứng dụng hỗ trợ tùy chỉnh màu sắc cho mỗi tiện ích, bạn sẽ phải tạo lại tiện ích mà bạn muốn tùy chỉnh.</string>    <!--
         Haven't found some strings? There's more at
         https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
     -->
