--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
 
     <!-- Import / Export -->
     <string name="import_folder">Import folder</string>
-    <string name="export_notes">Export all notes</string>
+    <string name="export_notes">Export notes</string>
     <string name="import_notes">Import notes</string>
     <string name="import_notes_pro">Import notes (Pro)</string>
 
