--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -74,7 +74,7 @@
     <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="import_folder">Importovat složku</string>
-    <string name="export_notes">Exportovat všechny poznámky</string>
+    <string name="export_notes">Exportovat poznámky</string>
     <string name="import_notes">Importovat poznámky</string>
     <string name="import_notes_pro">Importovat poznámky (Pro)</string>
     <!-- FAQ -->
